fix: p font on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -6,6 +6,7 @@
   src: url('/fonts/JetBrainsMono-Regular.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -13,6 +14,7 @@
   src: url('/fonts/JetBrainsMono-Bold.woff2') format('woff2');
   font-weight: bold;
   font-style: bold;
+  font-display: swap;
 }
 
 ::selection {
@@ -34,8 +36,9 @@ body {
 }
 
 p {
-  font-family: 'Bookman Old Style', 'Serifa BT', 'URW Bookman L', 'itc bookman',
-    times, serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   color: theme('colors.text');
   font-weight: normal;
   font-size: 16px;
